Fixed Bug Where Track Name in search results will be hidden due to white-space: wrap. Incorrect value used, needed white-space: normal;

--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -652,9 +652,7 @@
         align-items: center;
         justify-content: center;
         text-align: center;
-        white-space: wrap;
-        overflow-y: hidden;
-        text-overflow: ellipsis;
+        white-space: normal;
         margin: 0 auto;
     }
 
